2000-08-25  Eric Melski  <ericm@ajubasolutions.com>

	* tests/trace.test: Extended array tracing tests.

	* doc/trace.n: Clarified information about when array traces will
	be fired.

	* generic/tclVar.c (Tcl_ArrayObjCmd): Corrected call to CallTraces
	(for TCL_TRACE_ARRAY) to only be called when the variable is
	either an array or is undefined, to ensure that array traces do
	not fire for scalar variables.

2000-08-24  Eric Melski  <ericm@ajubasolutions.com>
	
	* doc/man.macros: Tweaked tab settings for .SO (Standard Options) 
	sections, based on suggestion from Peter Spjuth.

2000-08-24  Mo DeJong  <mdejong@redhat.com>

	* unix/README: Update to account for removal of --enable-gcc.
	* unix/configure.in:
	* unix/tcl.m4 (SC_ENABLE_GCC): Remove --enable-gcc option.
	* win/README: Add note about building with Cygwin.
	* win/configure.in: 
	* win/tcl.m4 (SC_ENABLE_GCC): Remove --enable-gcc option.
	Remove quick hack that provided cross compile support for
	windows builds.

2000-08-24  Eric Melski  <ericm@ajubasolutions.com>

	Overall change:  Added support for command rename/delete traces
	and new trace syntax, from patch from Vince Darley.  Added support
	for array traces for variables.  [RFE: 5048, 5967].

	* doc/trace.n: Updated documentation for new syntax; flagged old
	syntax as deprecated; added documentation for command
	rename/delete traces and variable array traces.

	* tests/trace.test: Updated tests for new trace syntax; new tests
	for command rename/delete traces; new tests for array traces.

	* generic/tclVar.c: Support for new trace syntax; support for
	TCL_TRACE_ARRAY.

	* generic/tclStubInit.c:
	* generic/tclDecls.h:
	* generic/tcl.decls: Stub functions for command rename/delete traces.

	* generic/tcl.h: 
	* generic/tclInt.h:
	* generic/tclBasic.c: Support for command traces.

	* generic/tclCmdMZ.c (TclTraceVariableObjCmd): Patched to support
	new [trace] syntax:  
	trace {add|remove|list} {variable|command} name ops command